--- a/samples/notebooks/atoms.ipynb
+++ b/samples/notebooks/atoms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2815774f",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1ee17b44",
    "metadata": {},
    "outputs": [],
@@ -92,10 +92,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "84b3c90c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1644a6649ae84ff8822671dff57c1b5f",
+       "version_major": 2,
+       "version_minor": 1
+      },
+      "text/plain": [
+       "Atoms(machine_layout={'cols': 36, 'zones': [{'title': 'Register 1', 'rows': 17, 'kind': 'register'}, {'title':…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "display(Atoms(layout, trace))"
    ]
